# HestAI-MCP

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.improved  CHANGELOG.md  CLAUDE.md  NOTICE  PHASE_4_COMPLETION_SUMMARY.md  README.md  STANDARD-4-VALIDATION-REPORT.md  odyssean.yaml  pyproject.toml  setup-mcp.sh  setup_mcp_server.sh
.claude/: settings.json
.claude/commands/: load.md  load2.md  mcp-servers.md  ns-auth.md  ns-create.md  wrap.md
.claude/hooks/: .env.example  .gitignore  cleanup-stale-state.sh  eslint.config.js  package-lock.json  package.json  skill-activation-prompt.sh  skill-activation-prompt.ts  skill-rules.json
.claude/rules/: mcp-tools.md  python-style.md  testing.md
.claude/skills/: skill-rules.json  skill-rules.schema.json
.github/: copilot-instructions.md
.github/agents/: door.agent.md  wall.agent.md  wind.agent.md
.github/workflows/: ci.yml  review-gate-caller.yml.template  review-gate.yml
.hestai/: README.md  last_cleanup
.hestai/audit/: bypass-log.jsonl
.hestai/context/: PROJECT-CHECKLIST.md  PROJECT-CHECKLIST.oct  PROJECT-CHECKLIST.oct.md  PROJECT-CONTEXT.md  PROJECT-CONTEXT.oct  PROJECT-CONTEXT.oct.md  PROJECT-ROADMAP.oct  PROJECT-ROADMAP.oct.md  exemplar-constitutional-enforcement.oct.md  exemplar-tdd-discipline.oct.md  exemplar-validation-methodology.oct.md  issue-222-session-1-findings.oct.md  issue-222-session-2-deep-review.oct.md  project-ideas.oct.md  test-infrastructure-assessment.oct.md
.hestai/decisions/: 2026-02-14-where-should-the-mcp-review-submission-tool-live-hestai-mcp-placement.oct.md
.hestai/reports/: 2025-12-19-system-steward-phase-0-2-review.oct.md  2025-12-20-clock-tools-production-readiness.oct.md  2025-12-24-directory-placement-compliance-audit.md  2025-12-24-octave-mcp-tool-evaluation.md  2025-12-25-audit-findings-status-review.md  2025-12-25-north-star-format-decision.md  2025-12-25-north-star-hook-fix-applied.md  2025-12-25-north-star-hook-governance-audit.md  2025-12-25-phantom-substrate-git-ref-research.oct.md  2025-12-27-bootstrap-resolution-roadmap.md  2025-12-27-enhancement-debate-summary.oct.md  2025-12-27-extraction-manifest.md  2025-12-27-kurkin-framework-comparison.md  2025-12-27-octave-create-error-analysis.oct.md  2025-12-27-phase-4-completion-summary.oct.md  2025-12-29-code-review-deep-dive.oct.md  2025-12-30-purpose-market-positioning.md  2025-12-31-ai-config-test-results.md  2026-01-02-ai-config-stress-test.md  2026-01-02-bind-process-review.oct.md  2026-01-02-context-steward-prompt-architecture.oct.md  2026-01-03-global-claude-md-reduction.md  2026-01-05-hub-to-hestai-sys-analysis.md  2026-01-13-governance-architecture-handoff.oct.md  adr-index-summary.oct.md  ci-simulation-evidence.txt  clockin-readiness-assessment.md  clockin-readiness-assessment.oct.md  issue-reconciliation-2025-12-28.oct.md  issue-reconciliation-validation-2025-12-28.oct.md  issue-transfer-completion-summary-2025-12-28.oct.md  issue-transfer-recommendations-2025-12-28.oct.md  kurkin-framework-comparison.md  project-8-phase-field-completion-2025-12-28.oct.md  project-8-status-2026-01-02.oct.md  project-8-sync-completion-2025-12-28.oct.md  review-gate-monitoring-evidence.md  session-b68d335c-compression.json  (+2 more)
config/: ai.yaml.example
debates/: 2024-12-24-hestai-context-architecture.oct.md  2024-12-25-hestai-context-distribution.oct.md  2025-12-24-hestai-context-architecture.oct.md  2025-12-25-hestai-context-distribution.oct.md  2025-12-26-adr-rfc-alignment-v2-agoral-forge.oct.md  2025-12-26-adr-rfc-alignment.oct.md  2025-12-27-hestai-enhancement-debate.oct.md  2025-12-27-system-steward-ai-necessity.oct.md  2025-12-27-system-steward-architecture.oct.md  2025-12-28-debate-placement.oct.md  2025-12-31-odyssean-anchor-strategy.oct.md  2026-01-01-agent-format-oa.oct.md  2026-01-01-identity-vs-binding-terminology.oct.md  2026-01-13-arch-structure.oct.md  2026-02-13-skills-format-premium.events.jsonl  2026-02-13-skills-format-strategy.events.jsonl  2026-02-13-skills-format-v2-premium.events.jsonl  2026-02-13-skills-format-v2-standard.events.jsonl  2026-02-14-dual-north-star-premium.events.jsonl  2026-02-14-dual-north-star-standard.events.jsonl  2026-02-15-how-should-submitreview-handle-01khfzw4.events.jsonl  2026-03-21-fundamental-question-agent-ide-01km90w0.events.jsonl  2026-03-21-review-the-odyssean-anchor-gui-01km90a5.events.jsonl  2026-03-21-skills-management-architecture-01km8yc4.events.jsonl  2026-03-22-anchor-ceremony-redesign.events.jsonl  2026-03-24-what-should-the-craft-field-va-01kmeq0v.events.jsonl  2026-04-06-d1-thick-client-vs-governance-engine-premium.events.jsonl  2026-04-06-d1-thick-client-vs-governance-engine-standard.events.jsonl  2026-04-17-should-we-build-a-context-upda-01kpde83.events.jsonl  OCTAVE_AUTO_GENERATION_FEATURE_REQUEST.md  adr-rfc-alignment-2025-12-26.json  adr-rfc-alignment-v2-2025-12-26.json  hestai-context-architecture-2024-12-24.json  hestai-context-distribution-2024-12-25.json  system-steward-final-architecture-2024-12-27.oct.md  system-steward-separation-2024-12-27.oct.md
docs/: ARCHITECTURE.md  agent-addition-protocol.md  agent-interview-tracker.md  dream-team-architecture.md  dream-team-proposal.md  governance-setup-guide.md  hestai-sys-security-model.md  hestai-sys-visibility-solution.md  mcp-server-setup.md  octave-alignment-strategy.md  octave-github-project-plan.md  octave-holistic-integration-plan.md  octave-integration-summary.md  odyssean-anchor-octave-aligned.md  odyssean-anchor-terminology.md  pre-commit-improvement-proposal.md  raph-octave-distinction.md  raph-vector-mistakes.md  raph-vector-refined-understanding.md  skill-loading-strategy.md  submit_review_workflow.md  trademarks.md  validation-8-agent-concepts-vs-ecosystem.md  why-raph-extensions.md
rfcs/: 0000-template.md  README.md
scripts/: create-doc.sh  generate-skill-rules.py  validate_namespaces.py  validate_review.py
tests/: __init__.py  conftest.py  test_imports.py  test_namespace_validation.py  test_validate_naming_visibility.py  test_validate_review.py
(+326 files in other folders)
