[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hestai-mcp"
version = "0.1.0"
description = "HestAI Context Management MCP Server - Dual-Layer Architecture"
authors = [{name = "HestAI", email = "noreply@hestai.dev"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "mcp>=0.1.0",
    "python-dotenv>=1.0.0",
    "keyring>=24.0.0",
    "pyyaml>=6.0",
    "octave-mcp>=1.0.0",  # Official OCTAVE parser with GBNF export support
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.7.0",
    "ruff~=0.15.0",
    "black==24.10.0",
    "types-pyyaml",
]

[project.urls]
Homepage = "https://github.com/elevanaltd/hestai-mcp"
Repository = "https://github.com/elevanaltd/hestai-mcp"
Documentation = "https://github.com/elevanaltd/hestai-mcp/docs"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["hestai_mcp*"]

[tool.setuptools.package-data]
# Ship hub payload so governance injection works from installed wheels.
hestai_mcp = ["_bundled_hub/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "smoke: fast import/sanity tests",
    "unit: unit-scoped tests",
    "behavior: executable behavior tests (NOW)",
    "contract: interaction/contract tests (SOON)",
    "integration: full integration tests (LATER)",
    "security: security-critical tests that validate fail-closed behavior",
]
addopts = [
    "--cov=hestai_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--strict-markers",
    "-v",
]
# Note: --cov-fail-under=89 is enforced in CI only (not here)
# Reason: pyproject.toml addopts apply to ALL pytest runs including:
#   - Subset test runs: pytest tests/unit/ai/
#   - TDD cycles: pytest tests/test_specific.py
#   - Debugging: pytest -k "test_case"
# These can't meet full-suite coverage thresholds.
# Coverage threshold belongs at release gate (CI), not tool defaults.
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
extra_checks = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "octave_mcp.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.hestai
  | \.venv
  | build
  | dist
)/
'''
